--- a/views/item.hbs
+++ b/views/item.hbs
@@ -1,5 +1,15 @@
+<ul id="slide-out" class="sidenav show-on-med-and-down">
+    <li><h4 class="center">SwoopIt</h4></li>
+    <li><a href="admin" class="black-text">Admin Home</a></li>
+    <li><a href="item" class="black-text active-col">Add Item</a></li>
+    <li><a href="category" class="black-text">Add Category</a></li>
+    <li><a href="items" class="black-text">Items</a></li>
+    <li><a href="categories" class="black-text">Categories</a></li>
+    <li><a href="blacklist" class="black-text">Blacklist Users</a></li>
+    <li><a href="/" class="blue-text">Sign Out</a></li>
+</ul>
 <div class="row" style="margin-bottom: 20px; margin-top: 20px">
-    <div class="col s2" style="margin-left: 20px;">
+    <div class="col s2 hide-on-med-and-down" style="margin-left: 20px;">
         <ul>
             <li><h3>Menu</h3></li>
         </ul>
@@ -14,7 +24,7 @@
         </div>
     </div>
 
-    <div class="container col s8" style="margin-left: 10px">
+    <div class="container col s10 hide-on-med-and-down" style="margin-left: 10px">
         <div class="row center">
             <h3>Add Item</h3>
             <form onsubmit="return false">
@@ -47,17 +57,55 @@
             </form>
         </div>
     </div>
+    <div class="container col s12 show-on-med-and-down hide-on-med-and-up" style="margin-left: 10px">
+        <div class="row center">
+            <div class="container">
+                <h3>Add Item</h3>
+                <form onsubmit="return false">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="name" type="text" class="validate">
+                            <label for="name">Item Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="price" type="text" class="validate">
+                            <label for="price">Item Price</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <select title="Categories" id="category1">
+                                <option value="" disabled selected>Category & Store</option>
+                            </select>
+                            <label>Category and Store</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="image" type="url" class="validate">
+                            <label for="image">Item Image</label>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-large blue white-text"
+                            onclick="addItem($('#name').val(), $('#price').val(), $('#category').val(), $('#image').val())">
+                        Submit
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
-
 <script>
     document.addEventListener('DOMContentLoaded', async function () {
         categories = await getCategories();
         items = await getItems();
         for (var i = 0; i < categories.length; i++) {
-            $('#category').append('<optgroup id="category-' + categories[i].store + '" label="' + storeNames[categories[i].store] + '"></optgroup>');
+            $('#category').append('<optgroup id="category1-' + categories[i].store + '" label="' + storeNames[categories[i].store] + '"></optgroup>');
+            $('#category1').append('<optgroup id="category1-' + categories[i].store + '" label="' + storeNames[categories[i].store] + '"></optgroup>');
+
         }
         for (i = 0; i < categories.length; i++) {
             $('#category-' + categories[i].store).append('<option value="' + categories[i].id + '">' + categories[i].name + '</option>');
+            $('#category1-' + categories[i].store).append('<option value="' + categories[i].id + '">' + categories[i].name + '</option>');
+
         }
         var elems = document.querySelectorAll('select');
         var instances = M.FormSelect.init(elems);
