--- a/views/items.hbs
+++ b/views/items.hbs
@@ -93,7 +93,10 @@
         } catch (e) {
             console.log(e);
         }
+    });
+    document.addEventListener('DOMContentLoaded', function () {
         $('#myTable').DataTable();
         $('#myTable1').DataTable();
+
     });
 </script>
