--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -46,8 +46,6 @@
         try {
             categories = await getCategories();
             items = await getItems();
-            var elems = document.querySelectorAll('.sidenav');
-            var instances = M.Sidenav.init(elems);
             for (var i = 0; i < categories.length; i++) {
                 var row = $('#body2').append('<tr></tr>')
                 row.append('<td>' + categories[i].name + '</td>');
@@ -57,6 +55,8 @@
         } catch (e) {
             console.log(e);
         }
+    });
+    document.addEventListener('DOMContentLoaded', function () {
         $('#myTable').DataTable();
     });
 </script>
