backend works except fo

--- a/views/blacklist.hbs
+++ b/views/blacklist.hbs
@@ -26,7 +26,7 @@
 
     <div class="container col s10 hide-on-med-and-down" style="margin-left: 10px">
         <div class="row center">
-            <h3>Blacklist User</h3>
+            <h3>Blacklist User - Not working</h3>
             <form onsubmit="return false">
                 <div class="row">
                     <div class="input-field col s12">
@@ -44,7 +44,7 @@
     <div class="container col s12 show-on-med-and-down hide-on-med-and-up" style="margin-left: 10px">
         <div class="row center">
             <div class="container">
-                <h3>Blacklist User</h3>
+                <h3>Blacklist User - not working</h3>
                 <form onsubmit="return false">
                     <div class="row">
                         <div class="input-field col s12">
