backend works except fo

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
     <!-- COMMON TAGS -->
     <title>{{{title}}}</title>
     <!-- Search Engine -->
@@ -48,7 +48,8 @@
         <div class="nav-wrapper">
             <a class="center brand-logo text-darken-1">{{{title}}}</a>
             <div class="left">
-                <a href="#" id="bam" data-target="slide-out" style="display: none;" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <a href="#" id="bam" data-target="slide-out" style="display: none;" class="sidenav-trigger"><i
+                        class="material-icons">menu</i></a>
             </div>
         </div>
     </nav>
