added google anylitics

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -63,7 +63,7 @@
                         <h5 id="category-count">Category Count: </h5>
                         <div class="card-action center" style="margin-top: 10px">
                             <a href="items" class="blue-text btn-flat waves-effect waves-light">View Items</a>
-                            <a href="items" class="blue-text btn-flat waves-effect waves-light">View Categories</a>
+                            <a href="categories.hbs" class="blue-text btn-flat waves-effect waves-light">View Categories</a>
                         </div>
                     </div>
                 </div>
