--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,6 +38,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <!-- Google Scripts -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119549513-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-119549513-1');
+    </script>
+
     <style>
 
     </style>
