--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -32,7 +32,7 @@
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title">Users</span>
-                        <div id="piechart" style="width: 400px; height: 250px;">
+                        <div id="piechart">
                             <div class="center">
                                 <div class="preloader-wrapper big active">
                                     <div class="spinner-layer spinner-blue white">
