--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -32,7 +32,7 @@
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title">Users</span>
-                        <div id="piechart" style="height: 200px">
+                        <div id="piechart" style="height: 153.19px">
                             <div class="center">
                                 <div class="preloader-wrapper big active">
                                     <div class="spinner-layer spinner-blue white">
@@ -77,6 +77,7 @@
                         <h5 id="item-count"></h5>
                         <h5 id="category-count"></h5>
                         <h5 id="user-count"></h5>
+                        <h5 id="order-count"></h5>
                         <div class="card-action center" style="margin-top: 10px">
                             <a href="items" class="blue-text btn-flat waves-effect waves-light">View Items</a>
                             <a href="categories" class="blue-text btn-flat waves-effect waves-light">View Categories</a>
@@ -97,7 +98,8 @@
             $('#preloader').hide();
             $('#item-count').html('Item Count: ' + items.length);
             $('#category-count').html('Category Count: ' + categories.length);
-            $('#user-count').html('Use Count: ' + users.length);
+            $('#user-count').html('User Count: ' + users.length);
+            $('#order-count').html('Order Count: ' + 'null');
         } catch (e) {
             console.log(e);
         }
