--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -5,6 +5,7 @@
     <li><a href="category" class="black-text">Add Category</a></li>
     <li><a href="items" class="black-text">Items</a></li>
     <li><a class="black-text">Categories</a></li>
+    <li><a href="users" class="black-text">Users</a></li>
     <li><a href="blacklist" class="black-text">Blacklist Users</a></li>
     <li><a href="/" class="blue-text">Sign Out</a></li>
 </ul>
@@ -19,6 +20,7 @@
             <a href="category" class="collection-item blue-text">Add Category</a>
             <a href="items" class="collection-item blue-text">Items</a>
             <a href="categories" class="collection-item blue-text">Categories</a>
+            <a href="users" class="blue-text collection-item">Users</a>
             <a href="blacklist" class="collection-item blue-text">Blacklist Users</a>
             <a href="/" class="collection-item blue-text">Sign Out</a>
         </div>
