--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -52,6 +52,7 @@
                             </div>
                         </div>
                         <div class="card-action center" style="margin-top: 10px">
+                            <a href="users" class="blue-text btn-flat waves-effect waves-light">Users</a>
                             <a href="blacklist" class="blue-text btn-flat waves-effect waves-light">Manage Users</a>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
                         <div class="card-action center" style="margin-top: 10px">
                             <a href="items" class="blue-text btn-flat waves-effect waves-light">View Items</a>
                             <a href="categories" class="blue-text btn-flat waves-effect waves-light">View Categories</a>
+                            <a href="users" class="blue-text btn-flat waves-effect waves-light">Users</a>
                         </div>
                     </div>
                 </div>
