--- a/views/users.hbs
+++ b/views/users.hbs
@@ -18,7 +18,7 @@
             <a href="admin" class="collection-item blue-text">Admin Home</a>
             <a href="item" class="collection-item blue-text">Add Item</a>
             <a href="category" class="collection-item blue-text">Add Category</a>
-            <a class="collection-item blue-text active-col">Items</a>
+            <a class="collection-item blue-text">Items</a>
             <a href="categories" class="collection-item blue-text">Categories</a>
             <a href="users" class="blue-text collection-item active-col">Users</a>
             <a href="blacklist" class="collection-item blue-text">Blacklist Users</a>
